--- a/src/style.css
+++ b/src/style.css
@@ -35,3 +35,47 @@ header {
   line-height: 15px;
   text-align: right;
 }
+
+main {
+  margin: 36px;
+}
+
+form {
+  /* margin: 36px; */
+  display: grid;
+  grid-template: 35px 40px / 1fr 1fr;
+  gap: 17px;
+}
+
+/* .inputs {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 15px;
+} */
+
+input {
+  font-family: 'Karla', sans-serif;
+  width: 230px;
+  height: 35px;
+  border: 1px solid #D5D4D8;
+  border-radius: 5px;
+  text-indent: 7px;
+}
+
+button {
+  font-family: 'Karla', sans-serif;
+  background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
+  border-radius: 5px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;  
+  text-align: center;
+  letter-spacing: -0.1em;
+  
+  color: #FFFFFF;
+
+  grid-column: 1 / -1;
+
+  border: none;
+  cursor: pointer;
+}
