--- a/src/style.css
+++ b/src/style.css
@@ -80,6 +80,44 @@ button {
 }
 
 .meme-image {
-  max-width: 100%;
+  width: 100%;
   border-radius: 2px;
+}
+
+.meme-container {
+  position: relative;
+}
+
+.meme-text {
+  text-transform: uppercase;
+  width: 100%;
+  text-align: center;
+  color: white;
+  letter-spacing: 1px;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 2em;
+  margin: 0;
+  padding: 20px;
+  text-shadow:
+  2px 2px 0 #000,
+  -2px -2px 0 #000,
+  2px -2px 0 #000,
+  -2px 2px 0 #000,
+  0 2px 0 #000,
+  2px 0 0 #000,
+  0 -2px 0 #000,
+  -2px 0 0 #000,
+  2px 2px 5px #000;
+  overflow-wrap: break-word;
+  hyphens: auto;
+}
+
+.text-top {
+  position: absolute;
+  top: 0;
+}
+
+.text-bottom {
+  position: absolute;
+  bottom: 0;
 }
